--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -21,168 +21,185 @@
         android:textStyle="bold"/>
 
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/inputViewEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_below="@id/clothual"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
-        app:endIconMode="clear_text"
-        app:startIconDrawable="@drawable/mail_48px"
-        >
+        android:layout_centerHorizontal="true">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editTextEmail"
-            android:layout_width="250dp"
-            android:layout_height="60dp"
-            android:inputType="text"
-            android:maxLength="20"
-            android:hint="@string/email"
-            android:background="@drawable/border_edit_text"
-            android:textColorHint="@color/black"
-            android:textSize="20sp"
-            android:fontFamily="@font/inter_semibold"
-            android:textStyle="bold|italic"
-            android:importantForAutofill="no" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-
-        android:id="@+id/inputCognome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/inputViewEmail"
-        android:layout_marginTop="10dp"
-        android:layout_centerHorizontal="true"
-        app:endIconMode="clear_text"
-        app:startIconDrawable="@drawable/person_48px"
-        >
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editTextSurname"
-            android:layout_width="250dp"
-            android:layout_height="60dp"
-            android:background="@drawable/border_edit_text"
-            android:importantForAutofill="no"
-            android:inputType="text"
-            android:maxLength="20"
-            android:textColorHint="@color/black"
-            android:hint="@string/surname"
-            android:fontFamily="@font/inter_semibold"
-            android:textStyle="bold|italic"
-             />
-
-    </com.google.android.material.textfield.TextInputLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
 
-    <com.google.android.material.textfield.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/inputViewEmail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="30dp"
+                app:endIconMode="clear_text"
+                app:startIconDrawable="@drawable/mail_48px"
+                >
 
-        android:id="@+id/inputNome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/inputCognome"
-        android:layout_marginTop="10dp"
-        app:endIconMode="clear_text"
-        android:layout_centerHorizontal="true"
-        app:startIconDrawable="@drawable/person_48px"
-        >
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/editTextEmail"
+                    android:layout_width="250dp"
+                    android:layout_height="60dp"
+                    android:inputType="text"
+                    android:maxLength="20"
+                    android:hint="@string/email"
+                    android:background="@drawable/border_edit_text"
+                    android:textColorHint="@color/black"
+                    android:textSize="20sp"
+                    android:fontFamily="@font/inter_semibold"
+                    android:textStyle="bold|italic"
+                    android:importantForAutofill="no" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editTextName"
-            android:layout_width="250dp"
-            android:layout_height="60dp"
-            android:background="@drawable/border_edit_text"
-            android:importantForAutofill="no"
-            android:inputType="text"
-            android:maxLength="20"
-            android:textColorHint="@color/black"
-            android:hint="@string/name"
-            android:fontFamily="@font/inter_semibold"
-            android:textStyle="bold|italic"
-            />
+            </com.google.android.material.textfield.TextInputLayout>
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
 
-    <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/inputCognome"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10dp"
+                app:endIconMode="clear_text"
+                app:startIconDrawable="@drawable/person_48px"
+                >
 
-        android:id="@+id/inputViewUsername"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_below="@id/inputNome"
-        app:endIconMode="clear_text"
-        android:layout_centerHorizontal="true"
-        app:startIconDrawable="@drawable/account_circle_48px2"
-        >
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/editTextSurname"
+                    android:layout_width="250dp"
+                    android:layout_height="60dp"
+                    android:background="@drawable/border_edit_text"
+                    android:importantForAutofill="no"
+                    android:inputType="text"
+                    android:maxLength="20"
+                    android:textColorHint="@color/black"
+                    android:hint="@string/surname"
+                    android:fontFamily="@font/inter_semibold"
+                    android:textStyle="bold|italic"
+                    />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editTextUsername"
-            android:layout_width="250dp"
-            android:layout_height="60dp"
-            android:background="@drawable/border_edit_text"
-            android:importantForAutofill="no"
-            android:inputType="text"
-            android:maxLength="20"
-            android:textColorHint="@color/black"
-            android:hint="@string/username"
-            android:fontFamily="@font/inter_semibold"
-            android:textStyle="bold|italic" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/inputViewPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_below="@id/inputViewUsername"
-        android:layout_centerHorizontal="true"
-        app:passwordToggleEnabled="true"
-        app:startIconDrawable="@drawable/key_48px"
-        >
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editTextPassword"
-            android:layout_width="250dp"
-            android:layout_height="60dp"
-            android:background="@drawable/border_edit_text"
-            android:importantForAutofill="no"
-            android:inputType="textPassword"
-            android:maxLength="20"
-            android:hint="@string/password"
-            android:textColor="@color/black"
-            android:fontFamily="@font/inter_semibold"
-            android:textStyle="bold|italic"
-            />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <TextView
-        android:id="@+id/policy"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/inputViewPassword"
-        android:layout_marginStart="20dp"
-        android:textAlignment="center"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="20dp"/>
+            </com.google.android.material.textfield.TextInputLayout>
 
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/policy"
-        android:background="@drawable/border_button"
-        android:text="@string/go_registration"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        />
+            <com.google.android.material.textfield.TextInputLayout
+
+                android:id="@+id/inputNome"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                app:endIconMode="clear_text"
+                android:layout_gravity="center_horizontal"
+                app:startIconDrawable="@drawable/person_48px"
+                >
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/editTextName"
+                    android:layout_width="250dp"
+                    android:layout_height="60dp"
+                    android:background="@drawable/border_edit_text"
+                    android:importantForAutofill="no"
+                    android:inputType="text"
+                    android:maxLength="20"
+                    android:textColorHint="@color/black"
+                    android:hint="@string/name"
+                    android:fontFamily="@font/inter_semibold"
+                    android:textStyle="bold|italic"
+                    />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+
+                android:id="@+id/inputViewUsername"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_gravity="center_horizontal"
+                app:endIconMode="clear_text"
+                app:startIconDrawable="@drawable/account_circle_48px2">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/editTextUsername"
+                    android:layout_width="250dp"
+                    android:layout_height="60dp"
+                    android:background="@drawable/border_edit_text"
+                    android:importantForAutofill="no"
+                    android:inputType="text"
+                    android:maxLength="20"
+                    android:textColorHint="@color/black"
+                    android:hint="@string/username"
+                    android:fontFamily="@font/inter_semibold"
+                    android:textStyle="bold|italic" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/inputViewPassword"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_gravity="center_horizontal"
+                app:passwordToggleEnabled="true"
+                app:startIconDrawable="@drawable/key_48px"
+                >
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/editTextPassword"
+                    android:layout_width="250dp"
+                    android:layout_height="60dp"
+                    android:background="@drawable/border_edit_text"
+                    android:importantForAutofill="no"
+                    android:inputType="textPassword"
+                    android:maxLength="20"
+                    android:hint="@string/password"
+                    android:textColor="@color/black"
+                    android:fontFamily="@font/inter_semibold"
+                    android:textStyle="bold|italic"
+                    />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/redirectLogin"
+                android:text="@string/already_an_user_login"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="20dp"/>
+
+            <TextView
+                android:id="@+id/policy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:textAlignment="center"
+                android:layout_marginEnd="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_gravity="center_horizontal"/>
 
 
+            <Button
+                android:id="@+id/button"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/border_button"
+                android:text="@string/go_registration"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:layout_marginBottom="30dp"/>
+
+        </LinearLayout>
+    </ScrollView>
 
 </RelativeLayout>
