--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Clothual" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="darktheme" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="android:colorBackground">@color/black</item>
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_200</item>
@@ -17,9 +17,13 @@
 
     <!-- Styles for TextInputLayout -->
     <style name="Widget.App.TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-        <item name="hintTextColor">@color/white</item>
+        <item name="android:textColorHint">@color/white</item>
         <item name="materialThemeOverlay">@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined</item>
         <item name="boxStrokeColor">@color/white</item>
+    </style>
+
+    <style name="ThemeOverlay.AppTheme.TextInputEditText.Outlined" parent="ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox">
+        <item name="android:textCursorDrawable">@color/white</item>
     </style>
 
     <style name="textView" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
@@ -31,5 +35,16 @@
         <item name="itemIconTint">@color/white</item>
         <item name="itemTextColor">@color/white</item>
     </style>
+
+    //bisogna cambiare i colori di questi
+    <style name="NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 
 </resources>
