--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<!--app:BackgroundColor="?attr/backgroundcolor"-->
 <ScrollView xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -301,6 +302,15 @@
                 android:layout_alignParentEnd="true"
                 />
         </RelativeLayout>
+
+        <!--
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="144dp"
+            android:layout_height="128dp"
+            tools:layout_editor_absoluteX="64dp"
+            tools:layout_editor_absoluteY="175dp" />-->
 
         <!--
         <TextView
