--- a/app/src/main/res/drawable/menu_home_border.xml
+++ b/app/src/main/res/drawable/menu_home_border.xml
@@ -8,7 +8,7 @@
         />
 
     <solid
-        android:color="@color/grey_persona_layout"
+        android:color="@color/backGroundAdapter"
         />
 </shape>
 
