--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,50 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".UI.core.Personal.Settings.SettingsFragment">
 
-   <LinearLayout
-       android:id="@+id/viewButton"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:layout_centerHorizontal="true"
-       android:layout_marginStart="20dp"
-       android:layout_marginEnd="20dp"
-       android:layout_marginTop="20dp"
-       android:background="@drawable/search_border"
-       android:orientation="vertical">
+    <LinearLayout
+        android:id="@+id/viewButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:background="@drawable/search_border"
+        android:orientation="vertical">
 
-       <TextView
-           android:id="@+id/scegliLingua"
-           style="@style/textView"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_marginStart="20dp"
-           android:layout_marginTop="10dp"
-           android:fontFamily="@font/inter_semibold"
-           android:text="Scegli Lingua" />
+        <TextView
+            android:id="@+id/scegliLingua"
+            style="@style/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/inter_semibold"
+            android:text="Scegli Lingua" />
 
-       <LinearLayout
+        <LinearLayout
             android:id="@+id/english"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center">
+
             <ImageView
                 android:id="@+id/imageEnglish"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"/>
+                android:layout_marginTop="12dp" />
+
             <TextView
                 android:id="@+id/changeLanguageEn"
-                android:drawableEnd="@drawable/united_kingdom"
                 android:layout_width="100dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginStart="5dp"
                 android:layout_height="wrap_content"
-                android:text="Inglese"
-                android:layout_centerHorizontal="true"/>
+                android:layout_centerHorizontal="true"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="12dp"
+                android:drawableEnd="@drawable/united_kingdom"
+                android:text="Inglese" />
         </LinearLayout>
 
         <LinearLayout
@@ -53,91 +56,95 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center">
 
-           <ImageView
-               android:id="@+id/imageItalian"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:layout_marginTop="12dp"/>
+            <ImageView
+                android:id="@+id/imageItalian"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp" />
+
             <TextView
                 android:id="@+id/changeLanguageIt"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:layout_marginStart="5dp"
-                android:drawableEnd="@drawable/italian_flag"
                 android:layout_below="@id/changeLanguageEn"
-                android:text="italiano"
-                android:layout_centerHorizontal="true"/>
+                android:layout_centerHorizontal="true"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="12dp"
+                android:drawableEnd="@drawable/italian_flag"
+                android:text="italiano" />
         </LinearLayout>
 
-       <LinearLayout
-           android:id="@+id/french"
-           android:layout_width="wrap_content"
-           android:layout_height="57dp"
-           android:layout_gravity="center">
+        <LinearLayout
+            android:id="@+id/french"
+            android:layout_width="wrap_content"
+            android:layout_height="57dp"
+            android:layout_gravity="center">
 
-           <ImageView
-               android:id="@+id/imageFrench"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:layout_marginTop="12dp" />
+            <ImageView
+                android:id="@+id/imageFrench"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp" />
 
-           <TextView
-               android:id="@+id/changeLanguageFr"
-               android:layout_width="100dp"
-               android:layout_height="wrap_content"
-               android:layout_below="@id/changeLanguageIt"
-               android:layout_centerHorizontal="true"
-               android:layout_marginStart="5dp"
-               android:layout_marginTop="12dp"
-               android:layout_marginBottom="12dp"
-               android:drawableEnd="@drawable/french_flag"
-               android:text="Francese" />
-       </LinearLayout>
+            <TextView
+                android:id="@+id/changeLanguageFr"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/changeLanguageIt"
+                android:layout_centerHorizontal="true"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginBottom="12dp"
+                android:drawableEnd="@drawable/french_flag"
+                android:text="Francese" />
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/viewButton"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
-        android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:orientation="vertical"
-        android:background="@drawable/search_border">
-    <TextView
-        android:id="@+id/dark_ligth_mode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
-        android:text="Scegli Tema"
-        style="@style/textView"
-        android:fontFamily="@font/inter_semibold"
-        android:layout_below="@id/viewButton"/>
+        android:background="@drawable/search_border"
+        android:orientation="vertical">
 
-    <RadioButton
-        android:id="@+id/darkmode"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_below="@id/dark_ligth_mode"
-        android:layout_marginStart="20dp"
-        android:text="@string/darkMode"/>
+        <TextView
+            android:id="@+id/dark_ligth_mode"
+            style="@style/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/viewButton"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/inter_semibold"
+            android:text="Scegli Tema" />
+
+        <RadioButton
+            android:id="@+id/darkmode"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_below="@id/dark_ligth_mode"
+            android:layout_marginStart="20dp"
+            android:text="@string/darkMode" />
+
         <RadioButton
             android:id="@+id/light"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_below="@id/dark_ligth_mode"
-            android:shadowColor="@color/black"
             android:layout_marginStart="20dp"
-            android:text="@string/lightMode"/>
+            android:shadowColor="@color/black"
+            android:text="@string/lightMode" />
+
         <RadioButton
             android:id="@+id/system"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_below="@id/dark_ligth_mode"
             android:layout_marginStart="20dp"
-            android:text="@string/systemMode"/>
+            android:text="@string/systemMode" />
     </LinearLayout>
 
     <Switch
