--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <declare-styleable name="darktheme">
         <attr name="colorPrimary" format="color"/>
         <attr name="colorPrimaryVariant" format="color"/>
@@ -13,5 +13,8 @@
 
         <attr name="background_color" format="color"/>
         <attr name="text_color" format="color"/>
+        <attr name="box_color" format="color"/>
     </declare-styleable>
+
+
 </resources>
