--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -193,7 +193,7 @@
                     android:layout_gravity="center_horizontal|center_vertical"/>
             </androidx.cardview.widget.CardView>
 
-            <!-- MAPPA -->
+            <!-- MAPPA
             <androidx.cardview.widget.CardView
                 android:id="@+id/map"
                 android:layout_width="match_parent"
@@ -216,7 +216,7 @@
                     android:textSize="35dp"
                     android:textColor="@color/white"
                     android:layout_gravity="center_horizontal|center_vertical"/>
-            </androidx.cardview.widget.CardView>
+            </androidx.cardview.widget.CardView>-->
 
         </androidx.gridlayout.widget.GridLayout>
     </androidx.core.widget.NestedScrollView>
