--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -6,9 +6,9 @@
             android:icon="@drawable/home_48px"
             android:title="Home" />
         <item
-            android:id="@+id/matchingFragment"
+            android:id="@+id/mapFragment"
             android:enabled="true"
-            android:icon="@drawable/join_inner_48px"
+            android:icon="@drawable/map_48px"
             android:title="Match" />
         <item
             android:id="@+id/photoFragment"
