--- a/app/src/main/res/layout-land/core_layout.xml
+++ b/app/src/main/res/layout-land/core_layout.xml
@@ -18,7 +18,7 @@
         app:titleCentered="true"
         app:titleTextColor="@color/black">
 
-        <TextView
+        <!--<TextView
             android:id="@+id/title"
             style="@style/textView"
             android:layout_width="match_parent"
@@ -32,7 +32,12 @@
             android:textColor="@color/black"
             android:textSize="30sp"
             android:textStyle="bold"
-            tools:ignore="MissingConstraints" />
+            tools:ignore="MissingConstraints" />-->
+        <ImageView
+            android:id="@+id/clothual"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            />
     </com.google.android.material.appbar.MaterialToolbar>
 
 
