--- a/app/src/main/res/layout-land/fragment_login.xml
+++ b/app/src/main/res/layout-land/fragment_login.xml
@@ -12,6 +12,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+            <!--
             <TextView
                 android:id="@+id/clothual"
                 android:layout_width="wrap_content"
@@ -24,7 +25,13 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
-                android:textStyle="bold"/>
+                android:textStyle="bold"/>-->
+            <ImageView
+                android:id="@+id/clothual"
+                android:layout_centerHorizontal="true"
+                android:layout_width="wrap_content"
+                android:layout_height="80dp"
+                />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/inputViewUsername"
@@ -32,7 +39,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/clothual"
                 android:layout_marginTop="50dp"
-                android:layout_centerHorizontal="true"
+                android:layout_marginStart="80dp"
+                android:layout_alignParentStart="true"
                 app:endIconMode="clear_text"
                 app:errorEnabled="true"
                 app:startIconDrawable="@drawable/account_circle_48px2"
@@ -59,9 +67,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:errorEnabled="true"
-                android:layout_marginTop="10dp"
-                android:layout_below="@id/inputViewUsername"
-                android:layout_centerHorizontal="true"
+                android:layout_marginTop="50dp"
+                android:layout_marginEnd="80dp"
+                android:layout_alignParentEnd="true"
+                android:layout_below="@id/clothual"
                 app:passwordToggleEnabled="true"
                 app:startIconDrawable="@drawable/key_48px"
                 >
@@ -183,6 +192,14 @@
                 android:layout_centerHorizontal="true"
                 android:visibility="visible"
                 />
+
+            <Button
+                android:id="@+id/salta"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/sign_in_button"
+                android:layout_centerHorizontal="true"
+                android:background="@color/celeste"/>
 
             <TextView
                 android:id="@+id/changeText"
