--- a/app/src/main/res/layout-land/fragment_logo.xml
+++ b/app/src/main/res/layout-land/fragment_logo.xml
@@ -6,6 +6,7 @@
     tools:context="com.example.clothual.UI.welcome.LogoFragment.LogoFragment"
     android:background="@color/black">
 
+    <!--
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -17,7 +18,15 @@
         android:layout_centerVertical="true"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:textStyle="bold"/>
+        android:textStyle="bold"/>-->
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/logo_white_on_black"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="230dp"/>
 
 
     <TextView
