--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".UI.welcome.LoginFragment.LoginFragment">
-
+<!--
     <TextView
         android:id="@+id/clothual"
         android:layout_width="wrap_content"
@@ -18,7 +18,14 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="20dp"
-        android:textStyle="bold"/>
+        android:textStyle="bold"/>-->
+    <ImageView
+        android:id="@+id/clothual"
+        android:layout_width="wrap_content"
+        android:layout_height="80dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/inputViewUsername"
