--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -154,11 +153,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/changeMode"
-        android:text="Informazioni"
-        android:textSize="20sp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="20dp"
+        android:text="Informazioni"
+        android:textSize="20sp"
 
 
         />
@@ -167,15 +166,14 @@
         android:id="@+id/myswitch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Night Mode"
         android:layout_below="@id/informazioniView"
         android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="20dp"
+        android:text="Night Mode"
 
 
         />
-
 
 
 </RelativeLayout>
