--- a/app/src/main/res/layout-land/core_layout.xml
+++ b/app/src/main/res/layout-land/core_layout.xml
@@ -6,7 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".UI.core.CoreActivity">
 
-
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top"
+        android:fitsSystemWindows="true"
+        android:theme="@style/AppBarOverlay"
+        app:layout_anchor="@id/nav_host_fragment">
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/top_appbar"
         android:layout_width="match_parent"
@@ -39,7 +46,7 @@
             android:layout_height="70dp"
             />
     </com.google.android.material.appbar.MaterialToolbar>
-
+    </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/nav_host_fragment"
@@ -50,7 +57,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/top_appbar"
+        app:layout_constraintTop_toBottomOf="@id/appBar"
         app:navGraph="@navigation/nav_core" />
 
 
