--- a/app/src/main/res/layout-land/add_dress_layout.xml
+++ b/app/src/main/res/layout-land/add_dress_layout.xml
@@ -6,47 +6,31 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:fontFamily="@font/montserrat_subrayada"
-        android:textSize="30sp"
-        style="@style/textView"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:layout_marginTop="16dp"
-        android:textAlignment="textStart"
-        android:layout_marginStart="20dp"
-        app:layout_constraintTop_toTopOf="parent"/>
+    <ImageView
+        android:id="@+id/clothualAddDress"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="70dp"
+        android:src="@drawable/logo_black_on_white"/>
 
     <ImageView
         android:id="@+id/imageViewDress"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:contentDescription="TODO"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/title"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="20dp"
+        app:layout_constraintTop_toBottomOf="@id/clothualAddDress"
         app:layout_constraintLeft_toLeftOf="parent"
         />
-
-    <View
-        android:id="@+id/view"
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="@color/black"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/imageViewDress"/>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/view"
-        android:layout_below="@id/view">
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/clothualAddDress"
+        app:layout_constraintStart_toEndOf="@id/imageViewDress">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -58,9 +42,10 @@
             <Spinner
                 android:id="@+id/spinner"
                 android:layout_width="250dp"
-                android:layout_centerHorizontal="true"
                 android:layout_height="48dp"
                 android:textAlignment="center"
+                android:layout_alignStart="@id/inputViewMarca"
+                android:layout_marginStart="100dp"
                 android:entries="@array/type"
                 android:background="@drawable/add_dress_border"/>
 
@@ -69,7 +54,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/spinner"
-                android:layout_centerHorizontal="true"
+                android:layout_marginStart="230dp"
                 android:layout_marginTop="15dp"
                 app:endIconMode="clear_text"
                 app:errorEnabled="true"
@@ -78,7 +63,7 @@
 
                 <EditText
                     android:id="@+id/editTextBrand"
-                    android:layout_width="250dp"
+                    android:layout_width="220dp"
                     android:layout_height="50dp"
                     android:background="@drawable/add_dress_border"
                     android:inputType="text"
@@ -98,7 +83,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:layout_below="@id/inputViewMarca"
+                android:layout_below="@id/spinner"
+                android:layout_alignEnd="@id/inputViewMarca"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="20dp"
                 app:endIconMode="clear_text"
                 app:errorEnabled="true"
                 app:startIconDrawable="@drawable/account_circle_48px2"
@@ -106,7 +95,7 @@
 
                 <EditText
                     android:id="@+id/editTextTemplate"
-                    android:layout_width="250dp"
+                    android:layout_width="220dp"
                     android:layout_height="50dp"
                     android:background="@drawable/add_dress_border"
                     android:inputType="text"
@@ -125,7 +114,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/inputViewModello"
-                android:layout_centerHorizontal="true"
+                android:layout_marginStart="230dp"
                 app:endIconMode="clear_text"
                 app:errorEnabled="true"
                 app:startIconDrawable="@drawable/account_circle_48px2"
@@ -133,7 +122,7 @@
 
                 <EditText
                     android:id="@+id/editTextColor"
-                    android:layout_width="250dp"
+                    android:layout_width="220dp"
                     android:layout_height="50dp"
                     android:background="@drawable/add_dress_border"
                     android:inputType="text"
@@ -151,16 +140,18 @@
                 android:id="@+id/inputViewDescrizione"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
+                android:layout_marginStart="230dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="20dp"
                 app:endIconMode="clear_text"
-                android:layout_below="@id/inputViewColore"
+                android:layout_below="@id/inputViewMarca"
                 app:errorEnabled="true"
                 app:startIconDrawable="@drawable/account_circle_48px2"
                 >
 
                 <EditText
                     android:id="@+id/editTextDescriprion"
-                    android:layout_width="250dp"
+                    android:layout_width="220dp"
                     android:layout_height="50dp"
                     android:background="@drawable/add_dress_border"
                     android:inputType="text"
@@ -180,7 +171,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/border_button"
                 android:layout_below="@id/inputViewDescrizione"
-                android:layout_centerHorizontal="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="210dp"
                 android:text="@string/save"
                 android:textColor="@color/white"
                 android:layout_marginBottom="16dp"
