--- a/app/src/main/res/layout/add_dress_layout.xml
+++ b/app/src/main/res/layout/add_dress_layout.xml
@@ -6,29 +6,20 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:fontFamily="@font/montserrat_subrayada"
-        android:textSize="30sp"
-        style="@style/textView"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:layout_marginTop="16dp"
-        android:textAlignment="textStart"
-        android:layout_marginStart="20dp"
-        app:layout_constraintTop_toTopOf="parent"/>
+    <ImageView
+        android:id="@+id/clothualAddDress"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="70dp"
+        android:src="@drawable/logo_black_on_white"/>
 
     <ImageView
         android:id="@+id/imageViewDress"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:contentDescription="TODO"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/title"
+        app:layout_constraintTop_toBottomOf="@id/clothualAddDress"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         />
@@ -38,6 +29,8 @@
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:layout_marginTop="10dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:background="@color/black"
         app:layout_constraintTop_toBottomOf="@id/imageViewDress"
         tools:layout_editor_absoluteX="0dp" />
@@ -48,7 +41,8 @@
         app:layout_constraintTop_toBottomOf="@id/imageViewDress"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="275dp">
+        android:layout_marginTop="275dp"
+        android:scrollbars="none">
         <!-- MODIFICARE LAYOUT BELOW -->
 
         <RelativeLayout
@@ -61,7 +55,8 @@
             <Spinner
                 android:id="@+id/spinner"
                 android:layout_width="250dp"
-                android:layout_height="45dp"
+                android:layout_height="48dp"
+                android:layout_marginTop="5dp"
                 android:layout_centerHorizontal="true"
                 android:background="@drawable/add_dress_border"
                 android:entries="@array/type"
@@ -178,7 +173,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/inputViewDescrizione"
                 android:layout_centerHorizontal="true"
-                android:layout_marginBottom="16dp"
+                android:layout_marginBottom="20dp"
                 android:background="@drawable/border_button"
                 android:text="@string/save"
                 android:textColor="@color/white"
