--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -39,22 +39,6 @@
         android:textColor="@color/white"
         tools:ignore="TouchTargetSizeCheck" />
 
-    <!--
-    <Button
-        android:id="@+id/go_out"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_below="@id/editProfile"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="16dp"
-        android:background="@drawable/border_button"
-        android:text="@string/go_out"
-        android:textColor="@color/white"
-        tools:ignore="TouchTargetSizeCheck" />-->
-
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -92,37 +76,7 @@
             android:textStyle="bold"
             android:background="@color/backGroundAdapter"/>
         </LinearLayout>
-        <!--
-        <View
-            android:layout_width="wrap_content"
-            android:layout_height="1dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginStart="60dp"
-            android:background="@color/black" />
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_marginTop="5dp"
-            android:orientation="horizontal">
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/list_48px"
-                android:background="@color/grey_persona_layout"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="10dp"
-                />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="@string/yourClothes"
-                style="@style/textView"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="40dp"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:background="@color/grey_persona_layout"/>
-        </LinearLayout>-->
+
         <View
         android:layout_width="wrap_content"
         android:layout_height="1dp"
@@ -215,38 +169,8 @@
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:background="@color/backGroundAdapter"/>
-        </LinearLayout>-->
-        <!--
-        <View
-            android:layout_width="wrap_content"
-            android:layout_height="1dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginStart="60dp"
-            android:background="@color/black" />
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_marginTop="2dp"
-            android:orientation="horizontal">
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/lightbulb_48px"
-                android:background="@color/grey_persona_layout"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="10dp"
-                />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="@string/tips"
-                style="@style/textView"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="40dp"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:background="@color/grey_persona_layout"/>
-        </LinearLayout>-->
+        </LinearLayout>
+
 
 
     </LinearLayout>
