--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,6 @@
     <color name="celeste">#8DCDFF</color>
     <color name="backGroundAdapter">#999999</color>
     <color name="gray_backround">#42000000</color>
+    <color name="grayDarkBackgroundMode">#303030</color>
     <color name="box_color" />
 </resources>
