--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/containerSettings"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".UI.core.Personal.Settings.SettingsFragment">
@@ -99,67 +100,19 @@
         </LinearLayout>
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/changeMode"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/viewButton"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="20dp"
-        android:background="@drawable/search_border"
-        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/dark_ligth_mode"
-            style="@style/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/viewButton"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/inter_semibold"
-            android:text="Scegli Tema" />
-
-        <RadioButton
-            android:id="@+id/darkmode"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_below="@id/dark_ligth_mode"
-            android:layout_marginStart="20dp"
-            android:text="@string/darkMode" />
-
-        <RadioButton
-            android:id="@+id/light"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_below="@id/dark_ligth_mode"
-            android:layout_marginStart="20dp"
-            android:shadowColor="@color/black"
-            android:text="@string/lightMode" />
-
-        <RadioButton
-            android:id="@+id/system"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_below="@id/dark_ligth_mode"
-            android:layout_marginStart="20dp"
-            android:text="@string/systemMode" />
-    </LinearLayout>
 
 
     <TextView
         android:id="@+id/informazioniView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/changeMode"
+        android:layout_below="@id/viewButton"
         android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="20dp"
         android:text="Informazioni"
         android:textSize="20sp"
-
-
         />
 
     <Switch
@@ -171,8 +124,6 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="20dp"
         android:minHeight="48dp"
-
-
         android:text="Night Mode" />
 
 
