--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,23 +1,22 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="darktheme" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="theme.Clothual" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_200</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnSurface">@color/gray_backround</item>
         <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_200</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <!-- Customize your theme here.-->
         <item name="textInputStyle">@style/Widget.App.TextInputLayout</item>
 
     </style>
 
-    <!-- Styles for TextInputLayout -->
+    <!-- Styles for TextInputLayout-->
     <style name="Widget.App.TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="android:textColorHint">@color/white</item>
         <item name="boxStrokeColor">@color/black</item>
@@ -34,6 +33,7 @@
     <style name="textView" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="hintTextColor">@color/white</item>
     </style>
+
 
     <style name="Widget.App.BottomNavigationView" parent="Widget.Material3.BottomNavigationView">
         <item name="backgroundTint">@color/black</item>
@@ -55,5 +55,4 @@
     </style>
 
     <style name="PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-
 </resources>
