--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,15 +4,14 @@
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnSurface">@color/white</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <!-- Customize your theme here.-->
         <item name="textInputStyle">@style/Widget.App.TextInputLayout</item>
 
     </style>
@@ -25,15 +24,18 @@
         <item name="boxStrokeColor">@color/white</item>
     </style>
 
+    <style name="textView" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="hintTextColor">@color/black</item>
+    </style>
+
+
     <style name="ThemeOverlay.AppTheme.TextInputEditText.Outlined" parent="ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox">
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorOnSurface">@color/white</item>
         <item name="android:textCursorDrawable">@color/black</item>
     </style>
 
-    <style name="textView" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <item name="hintTextColor">@color/black</item>
-    </style>
+
 
     <style name="Widget.App.BottomNavigationView" parent="Widget.Design.BottomNavigationView">
         <item name="backgroundTint">@color/white</item>
